--- a/src/main/java/vista/muroVacio.css
+++ b/src/main/java/vista/muroVacio.css
@@ -6,6 +6,7 @@
 body {
 	padding-top:70px;
 	padding-bottom:100px;
+	background-color: #E0E0E0;
 }
 
 
@@ -15,6 +16,19 @@ body {
   font-family: myFirstFont;
 }
 
+P {
+	font-family: 'Open Sans', sans-serif;
+}
+
+a.btn {
+	font-family: 'Open Sans', sans-serif;
+}
+#font {
+	font-family: 'Open Sans', sans-serif;
+}
+#seccion {
+	font-family: 'Open Sans', sans-serif;
+}
 @font-face {
     font-family: myFirstFont;
     src: url('airstrikelaser.ttf');
