--- a/src/main/java/vista/css/muroVacio.css
+++ b/src/main/java/vista/css/muroVacio.css
@@ -12,7 +12,7 @@ body {
 
 .jumbotron {
   /* Aqui poner la ruta de la imagen del jumbotron (donde pone "Bienvenido a Social Sport") */
-  background-image:   url('imagenes/header.png');
+  background-image: url('img/header.png');
   font-family: myFirstFont;
 }
 
