--- a/WebContent/css/profile.css
+++ b/WebContent/css/profile.css
@@ -71,9 +71,6 @@ body {
 }
 /*nav css close*/
 
-.outSesion {
-	margin-right: 50px;
-}
 
 .searhFriend {
 	margin-top: 12%;
@@ -91,6 +88,7 @@ body {
 	background-color: #59B2E0;
 	float: left;
 	padding: 15px 5px;
+	border-radius: 6px;
 }
 
 .profile-head img { 
@@ -175,7 +173,7 @@ body {
 
 .nav-tabs > li > a {
 	background: #DADADA;
-	border-radius: 0;
+	border-radius: 6px;
     box-shadow: inset 0 -8px 7px -9px rgba(0,0,0,.4),-2px -2px 5px -2px rgba(0,0,0,.4);
 }
 
@@ -188,13 +186,14 @@ body {
 .tab-pane {
 	background: #ffffff;
 	box-shadow: 0 0 4px rgba(0,0,0,.4);
-	border-radius: 0;
+	border-radius: 6px;
 	text-align: center;
 	padding: 10px;
 }
 
 .tab-content>.active {
-	margin-top:50px;
+	margin-top:15px;
+	margin-bottom: 10px;
 } 
 
 /* edit profile css*/
@@ -205,6 +204,7 @@ body {
 	height: auto;
 	float: left;
 	margin-left: 2%;
+	border-radius: 6px;
 }
 
 .hve-pro p {
@@ -435,11 +435,6 @@ h4.pro-title {
 		cursor: pointer;
 	}
 
-	.outSesion {
-		margin-right: 0;
-		margin-left: 75%;
-	}
-
 	.searhFriend {
 		margin-right: 0;
 		margin-left: 38%;
@@ -504,11 +499,6 @@ h4.pro-title {
 @media all and (max-width:430px){
 	.profile-head ul li {
 		font-size: 12px !important;
-	}
-
-	.outSesion {
-		margin-right: 0;
-		margin-left: 55%;
 	}
 
 	.searhFriend {
