--- a/WebContent/css/signup.css
+++ b/WebContent/css/signup.css
@@ -1,6 +1,19 @@
 body {
 padding-top: 90px;
+font-family: 'Noto Sans', sans-serif;
+background: url("../img/Sport.jpg") no-repeat center center fixed;
 }
+
+.cover {
+border-radius: 6px;
+background: rgba(0, 0, 0, 0.7);
+}
+h1, p{
+text-align: center;
+color: #fff;
+font-family: 'Noto Sans', sans-serif;
+}
+
 .panel-login {
 border-color: #ccc;
 -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
