--- a/WebContent/css/muroVacio.css
+++ b/WebContent/css/muroVacio.css
@@ -12,8 +12,12 @@ body {
 
 .jumbotron {
   /* Aqui poner la ruta de la imagen del jumbotron (donde pone "Bienvenido a Social Sport") */
-  background-image: url('img/header.png');
-  font-family: myFirstFont;
+  background-image: url('../img/header.png');
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  /*font-family: myFirstFont;*/
 }
 
 P {
