Update GUI Profile

--- a/WebContent/css/profile.css
+++ b/WebContent/css/profile.css
@@ -192,6 +192,16 @@ body {
 	padding: 10px;
 }
 
+.tab-paneEvent {
+	width: 40%;
+	background: #ffffff;
+	box-shadow: 0 0 4px rgba(0,0,0,.4);
+	border-radius: 6px;
+	text-align: center;
+	margin-right: 10%;
+	padding: 10px;
+}
+
 .tab-content>.active {
 	margin-top:15px;
 	margin-bottom: 10px;
@@ -223,6 +233,14 @@ h2.register {
 	color: #59B2E0;
 }
 
+h2.Subtittle { 
+	padding: 10px 25px; 
+	text-transform: capitalize;
+	font-size: 25px;
+	color: #00;
+}
+
+
 .fom-main { 
 	overflow:hidden;
 }
@@ -253,7 +271,7 @@ input.form-control {
 }
 
 textarea.form-control {
-	text-align: center;
+	text-align: left;
 }
 
 select.form-control {
