--- a/WebContent/css/profile.css
+++ b/WebContent/css/profile.css
@@ -3,10 +3,14 @@ body {
 	font-family: 'Noto Sans', sans-serif;
 }
 
+#busAmi{
+	width: 650px;
+}
+
 /*nav css*/
 .form-inline {
+	padding-top: 10px;
 	width: 100%;
-	padding-right: 45px;
 }
 
 .search-box1 {
@@ -24,7 +28,7 @@ body {
 .search-wrap {
 	display: block;
 	width: 100%;
-	height: 40px;
+	height: 30px;
 	padding: 6px 12px;
 	font-size: 14px;
 	line-height: 1.42857143;
@@ -39,18 +43,17 @@ body {
 	-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 	width: 100% !important;
-	padding-left: 45px;
 }
 
 .search-btn {
 	background: rgb(0, 4, 51);
-	width: 100%;
-	border-radius: 0px 20px 20px 0px;
+	width: 50%;
+	border-radius: 20px 20px 20px 20px;
 	color: #fff !important;
-	height: 40px;
+	height: 30px;
 	border: 0px solid;
 	font-weight: 0;
-	font-size: 14px;
+	font-size: 12px;
 }
 
 .search-btn:hover, .search-btn:focus {
@@ -441,7 +444,42 @@ h4.pro-title {
 	margin:0 !important;
 }
 
+@media all and (max-width:1200px){
+	.search-btn {
+		width: 70%;
+	}
+	#busAmi{
+		width: 500px;
+	}
+}
+
+
+@media all and (max-width:1000px){
+	.search-btn {
+		width: 100%;
+	}
+	#busAmi{
+		width: 450px;
+	}
+}
+
+@media all and (max-width:950px){
+	.search-btn {
+		width: 100%;
+	}
+	#busAmi{
+		width: 300px;
+	}
+}
+
 @media all and (max-width:768px){
+	.search-btn {
+		width: 100%;
+	}
+	#busAmi{
+		width: 300px;
+	}
+
 	.navbar-inverse .drop_menu {
 		display: block;
 		visibility: visible;
@@ -470,7 +508,7 @@ h4.pro-title {
 	}
 
 	.navbar-brand {
-		padding: 0;
+		padding: 15px;
 		margin-left: 10px !important;
 	}
 
@@ -515,8 +553,56 @@ h4.pro-title {
 		margin: 0 auto;
 	}
 }
+@media all and (max-width:760px){
+	.search-btn {
+		width: 100%;
+	}
+	#busAmi{
+		width: 750px;
+	}
+}
+@media all and (max-width:730px){
+	.search-btn {
+		width: 100%;
+	}
+	#busAmi{
+		width: 720px;
+	}
+}
+
+@media all and (max-width:700px){
+	.search-btn {
+		width: 100%;
+	}
+	#busAmi{
+		width: 700px;
+	}
+}
+@media all and (max-width:650px){
+	.search-btn {
+		width: 100%;
+	}
+	#busAmi{
+		width: 600px;
+	}
+}
+@media all and (max-width:520px){
+	.search-btn {
+		width: 100%;
+	}
+	#busAmi{
+		width: 500px;
+	}
+}
 
 @media all and (max-width:430px){
+	.search-btn {
+		width: 100%;
+	}
+	#busAmi{
+		width: 390px;
+	}
+
 	.profile-head ul li {
 		font-size: 12px !important;
 	}
@@ -555,6 +641,12 @@ h4.pro-title {
 }
 
 @media all and (max-width:400px){
+	.search-btn {
+		width: 100%;
+	}
+	#busAmi{
+		width: 350px;
+	}
 	#perfilInfo {
 		margin-right: 0;
 		margin-left: 10%;
@@ -567,5 +659,13 @@ h4.pro-title {
 
 	.nav-menu li a {
 		font-size: 11px;
+	}
+}
+@media all and (max-width:320px){
+	.search-btn {
+		width: 100%;
+	}
+	#busAmi{
+		width: 300px;
 	}
 }
